Fixed the background span error. It was being caused by my ignorance about margin classes :|. Going to put a dark-overlay on top of the image to make text legible.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,17 +18,15 @@
     margin-bottom: 1rem;
 }
 
-/*              // MESS WITH THIS TO ESTABLISH A BACKGROUND
+              // MESS WITH THIS TO ESTABLISH A BACKGROUND
 #services {
     position: relative;
-    top: -24px;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url("https://source.unsplash.com/zgRKQKHf8v0/2400x1600/");
+    background: url("https://source.unsplash.com/random/3840x2160/?nature");
+    //background: url("https://source.unsplash.com/zgRKQKHf8v0/2400x1600/"); // for a specific image
+    background-position: 0 0;
     background-repeat: no-repeat;
 }
-*/
+
 #footnote {
     font-size: 0.8rem;
     text-align: right;
